rework MacOS Terminal command one more time